--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -9,9 +9,9 @@
     <link href="{% static 'css/global.css' %}" rel="stylesheet">
     <link href="{% static 'css/datatables.min.css' %}" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg mb-2 navbar-dark" style="background-color: #292727">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #292727">
     <a class="navbar-brand" href="#">
-        <img class="rounded img-fluid" src="{% static 'media/logoTitleWhite.png' %}" width="200" height="auto">
+        <img class="rounded img-fluid" src="{% static 'media/logoSmall.png' %}" width="50" height="auto">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -19,17 +19,15 @@
     <div id="navbarNavDropdown" class="navbar-collapse collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/home/">Home</a>
+                <a class="nav-link" href="/home/">Dashboard</a>
             </li>
-            <li class="nav-item dropdown">
+            <!--<li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">League</a>
                 <div class="dropdown-menu">
                     <a href="/league/home/" class="dropdown-item">League Home</a>
                     <a href="/league/messageBoard/" class="dropdown-item">Message Board</a>
-                    <a href="/league/join/" class="dropdown-item">Join League</a>
-                    <a href="/league/create/" class="dropdown-item">Create League</a>
                 </div>
-            </li>
+            </li>-->
             <li class="nav-item">
                 <a class="nav-link" href="/picks/">Picks</a>
             </li>
@@ -38,6 +36,20 @@
             </li>
         </ul>
         <ul class="navbar-nav">
+
+            <li class="nav-item dropdown">
+                {% if activeLeague %}
+                <a class="nav-link dropdown-toggle username-nav" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ activeLeague }}</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    {% for league in userLeagues %}
+                    <a id="leagueName" name="{{ league.name }}" class="dropdown-item" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
+                    <div class="dropdown-divider"></div>
+                    <a href="/league/join/" class="dropdown-item">Join League</a>
+                    <a href="/league/create/" class="dropdown-item">Create League</a>
+                </div>
+                {% endif %}
+            </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle username-nav" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome, {{ user.username }}</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
