--- a/bets/static/bets/css/bets.css
+++ b/bets/static/bets/css/bets.css
@@ -20,10 +20,12 @@
 
 /* Point +/- Button Style */
 
-.point-box {
-    background-color: #4d4b4b;
-    color: #ffffff;
-    border-radius: 5px;
+.increase-bet-button {
+    touch-action: manipulation;
+}
+
+.increase-bet-button {
+    touch-action: manipulation;
 }
 
 button:disabled,
@@ -39,6 +41,15 @@ button[disabled] {
 
 .btn-outline-danger:disabled {
     color: #666666;
+}
+
+
+/* Point Display at top */
+
+.point-box {
+    background-color: #4d4b4b;
+    color: #ffffff;
+    border-radius: 5px;
 }
 
 
