--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -2,21 +2,18 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h2>My Account</h2>
+            <h5>My Account</h5>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <h5>User Profile</h5>
+            <p>Welcome, {{ user.get_username }}</p>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <p>Welcome, {{ user.get_username }}. Stay tuned. More features coming soon.</p>
+            <button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#deleteCOnfirm">Delete Account</button>
         </div>
-    </div>
-    <div class="row">
-        <button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#deleteCOnfirm">Delete Account</button>
     </div>
     <!-- Modal -->
     <div class="modal fade" id="deleteConfirm" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
