--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label>Email*</label>
-                    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Email">
+                    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Email" required>
                 </div>
             </div>
             <div class="form-row">
