--- a/command/templates/command/seasonSettings.html
+++ b/command/templates/command/seasonSettings.html
@@ -1,10 +1,69 @@
-{% extends "fantasyFootball/base.html" %} {% block page_content %}
+{% extends "fantasyFootball/base.html" %} {% block page_content %}{% load static %}
+
 <div class="container">
-    <h1>Season Settings {{ season.year }} </h1>
+    <h1 id="season" name="{{ season.year }}">Season Settings {{ season.year }} </h1>
     <hr>
     <div class="row">
-        <a href="1/" class="btn btn-secondary btn-sm">Game Settings</a>
+        <div class="col-md-6">
+            <a href="1/" class="btn btn-green">Game Settings</a>
+        </div>
     </div>
     <hr>
+    <h4>Add New Week</h4>
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <select id="weekType" class="form-control">
+                <option value="Preseason">Preseason</option>
+                <option value="Regular Season">Regular Season</option>
+                <option value="Wildcard">Wildcard</option>
+                <option value="Quarterfinals">Quarterfinals</option>
+                <option value="Semifinals">Semifinals</option>
+                <option value="Superbowl">Superbowl</option>
+            </select>
+                <button type="submit" id="addWeek" class="btn btn-success mt-2">Add Week</button>
+            </div>
+        </div>
+    </form>
+    <hr>
+    <h4>Add New Game</h4>
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label>Home Team</label>
+                <select id="homeTeam" class="form-control">
+                    {% for currentTeam in teams %}
+                    <option value="{{ currentTeam.name }}">{{ currentTeam.name }}</option>
+                    {% endfor %}
+                </select>
+
+                <label>Away Team</label>
+                <select id="awayTeam" class="form-control">
+                    {% for currentTeam in teams %}
+                    <option value="{{ currentTeam.name }}">{{ currentTeam.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group col-md-6">
+                <label>Game Date</label>
+                <input class="form-control" type="date" id="gameDate" min="2020-01-01" max="2030-01-01">
+                <label>Game Time</label>
+                <input class="form-control" type="time" id="gameTime" min="" max="">
+            </div>
+            <div class="form-group col-md-6">
+                <label>Week</label>
+                <select id="weekId" class="form-control">
+                    {% for currentWeek in weeks %}
+                    <option value="{{ currentWeek.id }}">{{ currentWeek.id }} ({{ currentWeek.altName }})</option>
+                    {% endfor %}
+                </select>
+                <label>Location</label>
+                <input type="text" class="form-control" id="location">
+            </div>
+        </div>
+        <button type="submit" id="addGame" class="btn btn-success">Create Game</button>
+    </form>
+    <hr>
 </div>
+<script src="{% static 'command/js/addWeekGame.js' %}"></script>
 {% endblock %}
