--- a/bets/templates/bets/betsHome.html
+++ b/bets/templates/bets/betsHome.html
@@ -4,7 +4,17 @@
 <body>
     <div class="container">
         <!--Week and League List Selectors-->
-        {% include "fantasyFootball/weekList.html" %}
+        <div class="d-flex flex-row justify-content-between mb-2">
+            <div class="dropdown">
+                <button class="btn btn-green btn-sm dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Week {{ week }}
+                </button>
+                <div class="dropdown-menu">
+                    {% for week in weeks %}
+                    <a class="dropdown-item" href="/bets/{{ week }}/">Week {{ week }}</a> {% endfor %}
+                </div>
+            </div>
+        </div>
         <!-- Total Points Display -->
         <div class="d-flex flex-row justify-content-center mt-2 mb-2">
             <div class="col-lg-3 point-box text-center">
