--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -7,7 +7,17 @@
             <!--Game column-->
             <div class="col-lg-6">
                 <!-- Week List Picker -->
-                {% include "fantasyFootball/weekList.html" %}
+                <div class="d-flex flex-row justify-content-between mb-2">
+                    <div class="dropdown">
+                        <button class="btn btn-green btn-sm dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Week {{ week }}
+                        </button>
+                        <div class="dropdown-menu">
+                            {% for week in weeks %}
+                            <a class="dropdown-item" href="/home/{{ week }}/">Week {{ week }}</a> {% endfor %}
+                        </div>
+                    </div>
+                </div>
                 <!-- Games -->
                 <div class="row">
                     <table class="table btn-table text-center" cellspacing="0" width="100%">
