--- a/command/templates/command/gameOptions.html
+++ b/command/templates/command/gameOptions.html
@@ -2,36 +2,20 @@
 
 <div class="container">
     <h1 id="seasonId" value="{{ season.year }}">Season Settings {{ season.year }} </h1>
-    <div class="row">
-        <div class="col-sm-8">
-            <h1 id="weekId" value="{{ weekId }}">Week {{ weekId }}</h1>
-        </div>
-        <div class="col-sm-4">
+    <div class="d-flex flex-row justify-content-between mb-2">
+        <div class="col-lg-6">
             <div class="dropdown">
-                <button class="btn btn-indigo btn-sm btn-block dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Select Week
-            </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="/command/{{ season.year }}/1/">Week 1</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/2/">Week 2</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/3/">Week 3</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/4/">Week 4</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/5/">Week 5</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/6/">Week 6</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/7/">Week 7</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/8/">Week 8</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/9/">Week 9</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/10/">Week 10</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/11/">Week 11</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/12/">Week 12</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/13/">Week 13</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/14/">Week 14</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/15/">Week 15</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/16/">Week 16</a>
-                    <a class="dropdown-item" href="/command/{{ season.year }}/17/">Week 17</a>
+                <button class="btn btn-green btn-sm dropdown-toggle" type="button" id="weekId" value="{{ weekId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Week {{ weekId }}
+                </button>
+                <div class="dropdown-menu">
+                    {% for week in weeks %}
+                    <a class="dropdown-item" href="/command/{{ season.year }}/{{ week.id}}/">Week {{ week.id }}</a> {% endfor %}
                 </div>
             </div>
-            <input type="submit" class="btn btn-success btn-sm btn-block mt-1 save-button" value="Save Scores" />
+        </div>
+        <div class="col-lg-6">
+            <input type="submit" class="btn btn-green btn-sm mt-1 save-button" value="Save Scores" />
         </div>
     </div>
     <div class="row">
@@ -44,6 +28,7 @@
                     <th scope="col">Away Score</th>
                     <th scope="col">Away Spread</th>
                     <th colspan="2">Lock Picks</th>
+                    <th scope="col">Delete Game</th>
                 </tr>
             </thead>
             <tbody>
@@ -63,8 +48,8 @@
                     <td>
                         <input type="number" class="form-control away-spread" size="3" value="{{ currentGame.awaySpread }}">
                     </td>
-                    <td><input class="btn btn-indigo btn-sm m-0 lock-button" value="Lock" /></td>
-                    <td><input class="btn btn-indigo btn-sm m-0 unlock-button" value="Unlocked" disabled/></td>
+                    <td><input type="submit" class="btn btn-indigo btn-sm m-0 lock-button" value="Lock" /></td>
+                    <td><input type="submit" class="btn btn-indigo btn-sm m-0 unlock-button" value="Unlocked" disabled/></td>
                     {% else %}
                     <td>
                         <input type="number" class="form-control home-score" size="3" value="{{ currentGame.homeScore }}">
@@ -78,8 +63,9 @@
                     <td>
                         <input type="number" class="form-control away-spread" size="3" value="{{ currentGame.awaySpread }}">
                     </td>
-                    <td><input class="btn btn-indigo btn-sm m-0 lock-button" value="Locked" disabled/></td>
-                    <td><input class="btn btn-indigo btn-sm m-0 unlock-button" value="Unlock" /></td>{% endif %}
+                    <td><input type="submit" class="btn btn-indigo btn-sm m-0 lock-button" value="Locked" disabled/></td>
+                    <td><input type="submit" class="btn btn-indigo btn-sm m-0 unlock-button" value="Unlock" /></td>{% endif %}
+                    <td><input type="submit" class="btn btn-sm btn-danger delete-button" value="Delete" /></td>
                 </tr>
                 {% endfor %}
             </tbody>
