Edited welcome page text

--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -3,7 +3,7 @@
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Welcome!</h1>
-    <p class="lead">Start or join a league and take part in a season-long competition to determine who can correctly predict the winner of the most NFL games.</p>
+    <p class="lead">Create or join a league and take part in a season-long competition to determine who can score the most points through picks and spread bets.</p>
 </div>
 
 <div class="container">
