--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -10,7 +10,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #292727">
     <a class="navbar-brand" href="#">
-        <img class="rounded img-fluid" src="{% static 'media/logoSmall.png' %}" width="50" height="auto">
+        <img class="rounded img-fluid" src="{% static 'media/logoSmallWhite.png' %}" width="50" height="auto">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
