--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -12,40 +12,52 @@
     <a class="navbar-brand" href="#">
         <img class="rounded img-fluid" src="{% static 'media/logoSmallWhite.png' %}" width="50" height="auto">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div id="navbarNavDropdown" class="navbar-collapse collapse">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/home/">Dashboard</a>
+        <ul class="navbar-nav nav-pills mr-auto">
+            <li class="nav-item main-menu mr-1">
+                {% if page == 'dashboard' %}
+                <a class="nav-link active" href="/home/">Dashboard</a> {% else %}
+                <a class="nav-link" href="/home/">Dashboard</a> {% endif %}
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/picks/">Picks</a>
+            <li class="nav-item main-menu mr-1">
+                {% if page == 'picks' %}
+                <a class="nav-link active" href="/picks/">Picks</a> {% else %}
+                <a class="nav-link" href="/picks/">Picks</a> {% endif %}
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/bets/">Bets</a>
+            <li class="nav-item main-menu">
+                {% if page == 'bets' %}
+                <a class="nav-link active" href="/bets/">Bets</a> {% else %}
+                <a class="nav-link" href="/bets/">Bets</a> {% endif %}
             </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 {% if activeLeague %}
-                <a class="nav-link dropdown-toggle username-nav" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ activeLeague }}</a>
+                <a class="dropdown-toggle nav-link nav-league" data-toggle="dropdown" aria-expanded="false" href="#">
+                    <img class="mr-2" src="{% static 'media/leagueIcon.png' %}" width="auto" height="25" />
+                    <span>{{ activeLeague }}</span>
+                </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     {% for league in userLeagues %}
-                    <a id="leagueName" name="{{ league.name }}" class="dropdown-item" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
+                    <a id="leagueName" name="{{ league.name }}" class="dropdown-item dropdown-league" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
                     <div class="dropdown-divider"></div>
-                    <a href="/league/join/" class="dropdown-item">Join League</a>
-                    <a href="/league/create/" class="dropdown-item">Create League</a>
+                    <a href="/league/join/" class="dropdown-item dropdown-league">Join League</a>
+                    <a href="/league/create/" class="dropdown-item dropdown-league">Create League</a>
                 </div>
                 {% endif %}
             </li>
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle username-nav" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome, {{ user.username }}</a>
+                <a class="dropdown-toggle nav-link nav-account" data-toggle="dropdown" aria-expanded="false" href="#">
+                    <img class="mr-2" src="{% static 'media/avatarWhite.png' %}" width="25" height="auto" />
+                    <span class="username-nav">Welcome, {{ user.username }}</span>
+                </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/account/">My Account</a>
-                    <a class="dropdown-item" href="/logout/">Logout</a>
+                    <a class="dropdown-item dropdown-account" href="/account/">My Account</a>
+                    <a class="dropdown-item dropdown-account" href="/logout/">Logout</a>
                 </div>
             </li>
         </ul>
@@ -54,6 +66,7 @@
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
 <!-- Custom js -->
 <script src="{% static 'js/jquery.cookie.js' %}"></script>
