Updated login and join button style

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -10,9 +10,9 @@
     <div class="container-fluid">
         <nav class="navbar navbar-light navbar-expand fixed-top bg-white">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="{% static 'media/logoSmall.png' %}" width="50" /></a>
+                <a class="navbar-brand" href="#"><img src="{% static 'media/logoSmallBlack.png' %}" width="50" /></a>
                 <div><a class="btn mr-2 btn-green-outline" href="/login/">Login</a>
-                    <a class="btn mr-1" href="/account/create/" style="background-color: #19A404;color: #ffffff;">Join</a></div>
+                    <a class="btn mr-1 btn-green" href="/account/create/">Join</a></div>
             </div>
         </nav>
         <div class="row">
